--- a/index.html
+++ b/index.html
@@ -7,22 +7,28 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@200&display=swap" rel="stylesheet">
   </head>
 <body>
-  <nav class="navBar nav-pills nav-fill">
+  <nav class="navBar nav-pills nav-fill fixed-top">
   <ul class="nav " id="navBar">
-    <li class="nav-item col-md-2 display-6 text-center d-flex align-items-center">
-      <a class="nav-link text-success fs-4" href="/">Inicio</a>
+    <li class="nav-item col-md-3 display-6 text-center d-flex align-items-center">
+      <a class="nav-link text-light fs-4" href="/">INICIO</a>
     </li>
-    <li class="nav-item col-md-2 display-6 text-center d-flex align-items-center">
-      <a class="nav-link text-success fs-4" href="#">Nosotros</a>
+    <li class="nav-item col-md-3 display-6 text-center d-flex align-items-center">
+      <a class="nav-link text-light fs-4" href="#">NOSOTROS</a>
     </li>
-    <li class="nav-item col-md-4 display-6 text-center d-flex align-items-center">
+    <li class="nav-item col-md-5 display-6 text-center d-flex align-items-center">
       <div class="container-fluid">
         <form class="d-flex" role="search">
-          <input class="form-control me-4 " type="search" placeholder="Buscar" aria-label="Buscar">
-          <button class="btn btn-outline-success" type="submit">Buscar</button>
+          <input id="formulario" class="form-control me-4 " type="search" placeholder="Buscar" aria-label="Buscar">
+          <div class="buscador-container"></div>  
+          <button id="boton-busqueda" class="btn btn-outline-light" type="submit">Buscar</button>
         </form>
+        <ul id="resultado"></ul>
+      </div>
       </div>
     </li>
     <li class="nav-item col-md-1 display-9 bg-success align-items-center">
@@ -99,6 +105,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 <script src="/js/script.js"></script>
+<script src="/js/buscador.js"></script>
 <script src="/js/carrito.js"></script>
 </body>
 </html>
