--- a/paginas/carrito.html
+++ b/paginas/carrito.html
@@ -7,42 +7,46 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="../style.css">
+    <script src="https://kit.fontawesome.com/41bcea2ae3.js" crossorigin="anonymous"></script>
   </head>
 <body>
-  <nav class="navBar nav-pills nav-fill">
-    <ul class="nav " id="navBar">
-      <li class="nav-item col-md-2 display-6 text-center d-flex align-items-center">
-        <a class="nav-link text-success fs-4" href="../index.html">Inicio</a>
-      </li>
-       <li class="nav-item col-md-2 display-6 text-center d-flex align-items-center">
-        <a class="nav-link text-success fs-4" href="#">Nosotros</a>
-      </li>
-      <li class="nav-item col-md-4 display-6 text-center d-flex align-items-center">
-        <div class="container-fluid">
-          <form class="d-flex" role="search">
-            <input class="form-control me-4 " type="search" placeholder="Buscar" aria-label="Buscar">
-            <button class="btn btn-outline-success" type="submit">Buscar</button>
-          </form>
+  <header>
+    <nav class="navBar nav-pills nav-fill">
+      <ul class="nav " id="navBar">
+        <li class="nav-item col-md-3 display-6 text-center d-flex align-items-center">
+          <a class="nav-link text-light fs-4" href="../index.html">INICIO</a>
+        </li>
+        <li class="nav-item col-md-3 display-6 text-center d-flex align-items-center">
+          <a class="nav-link text-light fs-4" href="#">NOSOTROS</a>
+        </li>
+        <li class="nav-item col-md-5 display-6 text-center d-flex align-items-center">
+          <div class="container-fluid">
+            <form class="d-flex" role="search">
+              <input id="formulario" class="form-control me-4 " type="search" placeholder="Buscar" aria-label="Buscar">
+              <div class="buscador-container"></div>  
+              <button id="boton-busqueda" class="btn btn-outline-light" type="submit">Buscar</button>
+            </form>
+            <ul id="resultado"></ul>
+          </div>
+          </div>
+        </li>
+        <li class="nav-item col-md-1 display-9 bg-success align-items-center">
+          <div class="carrito">
+            <a href="../paginas/carrito.html" class="js-toggle-cart text-decoration-none">
+                <div class="cart-text-light-icon text-light">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
+                      <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+                    </svg>
+                </div>
+                <span class="cart-text-light-items text-light">
+                    <span id= 'numero' class= 'js-cart-widget-total text-light'> 0 </span>
+                </span>
+                 </a>
         </div>
-      </li>
-      <li class="nav-item col-md-1 display-9 bg-success align-items-center">
-        <div class="carrito">
-          <a href="carrito.html" class="js-toggle-cart text-decoration-none">
-            <div class="cart-text-light-icon text-light">
-                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
-                  <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
-                </svg>
-            </div>
-            <span class="cart-text-light-items text-light">
-                <span id= 'numero' class= 'js-cart-widget-total text-light'> 0 </span>
-            </span>
-             </a>
-  </div>
-</li>
-</ul>
-</nav>
-
-<main id="mainCarrito">
+       </li>
+      </ul>
+    </nav>
+<main id="mainCarrito" class="mt-5">
   <div class="text-success text-center">
     <h2>Tu carrito</h2>
       <div id="carritoContainer">
@@ -51,7 +55,7 @@
 </main>
 
 
-<footer class="footer-style bg-success text-light text-center p-2">
+<footer class="footer-style bg-success text-light text-center p-2 fixed-bottom">
     <div class="container">
         <div class="row">
             <div class="col-md-6 footer-col">
@@ -75,6 +79,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
   <script src="/js/script.js"></script>
+  <script src="/js/buscador.js"></script>
   <script src="/js/carrito.js"></script>
   
 </body>
